# xrust

./: Cargo.toml  README.md
src/: main.rs
src/concepts/: mod.rs
src/concepts/asynchronous/: coroutine_test.rs  mod.rs  repeating_call_api.rs  repeating_call_api_test.rs  sample_api.rs  sample_api_test.rs  thread.rs  thread_test.rs
src/concepts/smart_pointers/: interior_mutability_pattern.rs  interior_mutability_pattern_test.rs  list_test.rs  mod.rs  reference_count.rs  reference_count_test.rs  xderef_test.rs
src/concepts/xbox/: list_test.rs  mod.rs  xderef.rs  xderef_test.rs
src/models/: error.rs
src/patterns/factory/: factory.rs  factory_test.rs  mod.rs
src/techniques/: mod.rs  type_conversion.rs  type_conversion_test.rs
src/techniques/type_conversion/: mod.rs  type_conversion_test.rs
