[package]
name = "xrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
lazy_static = "1.4.0"
rand = "0.8.5"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread", "time"] }
